fix: add flex container to main to fix overflow from editor textarea into preview

--- a/MarkdownPreviewer/styles.css
+++ b/MarkdownPreviewer/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #1f2e3d;
+  background-color: black;
   width: 100vw;
   height: 100vh;
 }
@@ -26,7 +26,6 @@ textarea {
 
 .editor-max {
   position: fixed;
-  inset: 0 100vw 100vh 0;
   min-height: 100vh;
   max-height: 100vh;
   height: 100vh;
@@ -69,7 +68,6 @@ textarea {
   width: 100%;
   margin: 0;
   z-index: 1;
-  opacity: 1;
 }
 
 img {
@@ -78,7 +76,6 @@ img {
 
 svg {
   outline: 2px solid red;
-  /*  background-color: red;*/
   margin: 0;
   padding: 0;
   background-image: linear-gradient(
@@ -86,4 +83,9 @@ svg {
     rgba(255, 0, 0, 0),
     rgba(255, 0, 0, 1)
   );
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
